修改默认配置,移除不需要的模块,增加jdbc用户验证支持