@@ -35,6 +35,12 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>org.jasig.cas</groupId>
+      <artifactId>cas-server-support-jdbc</artifactId>
+      <version>${project.version}</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-expression</artifactId>
       <version>${spring.version}</version>
@@ -78,6 +84,39 @@
               </includes>
             </resource>
           </webResources>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <configuration>
+          <connectors>
+            <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+              <port>8081</port>
+              <maxIdleTime>60000</maxIdleTime>
+            </connector>
+            <connector implementation="org.eclipse.jetty.server.ssl.SslSocketConnector">
+              <port>8443</port>
+              <maxIdleTime>60000</maxIdleTime>
+              <keystore>${project.basedir}/src/main/resources/config/auth.imlinlx.jks</keystore>
+              <password>changeit</password>
+              <keyPassword>changeit</keyPassword>
+            </connector>
+          </connectors>
+          <reload>automatic</reload>
+          <scanIntervalSeconds>0</scanIntervalSeconds>
+          <webApp>
+            <contextPath>/</contextPath>
+          </webApp>
+          <systemProperties>
+            <systemProperty>
+              <name>org.mortbay.util.URI.charset</name>
+              <value>UTF-8</value>
+            </systemProperty>
+          </systemProperties>
+          <jvmArgs>-Xmx1024m -XX:PermSize=512m -XX:MaxPermSize=1024m
+            -Dfile.encoding=UTF-8
+          </jvmArgs>
         </configuration>
       </plugin>
     </plugins>
